[project]
name = "dictrack-fork"
version = "2.1.5"
description = "A Flexible Dictionary Data Tracker for Condition-Based Monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "Tim Liao", email = "bonis0324work@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "dictor < 1.0",
    "six",
    "apscheduler < 4.0",
]

[project.optional-dependencies]
redis = [
    "python-redis-lock < 5.0",
    "hiredis",
    "redis[hiredis] < 6.0",
]
memory = [
    "sortedcontainers < 3.0",
]
mongodb = [
    "pymongo < 5.0",
]
gevent = [
    "apscheduler[gevent] < 4.0",
]
docs = [
    "sphinx",
    "sphinxawesome-theme",
    'zensical>=0.0.15; python_version >= "3.10"',
]

[project.urls]
Homepage = "https://github.com/bons0324/dictrack"

[dependency-groups]
dev = [
    'mkdocs-material>=9.7.1; python_version >= "3.8"',
    'mkdocstrings>=1.0.0; python_version >= "3.10"',
    'mkdocstrings-python>=2.0.1; python_version >= "3.10"',
    'zensical>=0.0.15; python_version >= "3.10"',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
exclude = ["tests*", "locust*"]
